--- a/core/pom.xml
+++ b/core/pom.xml
@@ -65,6 +65,10 @@
         <artifactId>pitest-maven</artifactId>
         <version>1.17.0</version>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
 
       <plugin>
         <groupId>biz.aQute.bnd</groupId>
